<resources>
    <string name="app_name">EMEX51</string>
    <string name="toolbar_name">EMEX51 EXPERIENCE</string>
    <string name="header_name">Hola</string>
    <string name="texto_boton_iniciar_sesion">Inicia sesión</string>
    <string name="texto_boton_registro">Regístrate ahora</string>
    <string name="texto_bienvenida">Vive una experiencia irrepetible</string>
    <string name="texto_contrasenia_olvidada">¿Has olvidado la contraseña?</string>
    <string name="texto_switch_recuerdo">Recuerdame</string>
    <string name="texto_email">Correo electrónico</string>
    <string name="texto_contrasenia">Contraseña</string>
    <string name="texto_cabecera_registro">Regístrate</string>
    <string name="texto_nombre">Nombre</string>
    <string name="texto_dni">DNI</string>
    <string name="texto_login">Login</string>
    <string name="texto_boton_enviar">Enviar</string>
    <string name="texto_informativo_email_olvidado">Introduce aquí tu dirección de correo electrónico y te enviaremos un e-mail para que puedas cambiarla</string>
    <string name="texto_aceptar_terminos">Acepto los Términos y condiciones y la política de privacidad de Emex51</string>
    <string name="texto_imagen">Canyion</string>
    <string name="texto_boton_main">Entrar</string>
    <string name="title_activity_menu_principal">ActivityMenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_volver">Volver</string>
    <string name="text_seleccionar">Seleccionar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="botonCambioContrasenias">MODIFICAR CONTRASEÑA</string>
    <string name="botonEliminarCuenta">ELIMINAR CUENTA</string>

    <string name="editcontraseniaActual">Contraseña actual</string>
    <string name="editNuevaContrasenia">Contraseña nueva</string>
    <string name="editRepetirContrasenia">Repetir contraseña nueva</string>
    <string name="buttonGuardarContrasenias">Guardar</string>

    <string name="texto_boton_anadir_sector">Ver Sector</string>
    <string name="texto_boton_ir_personal">Mi Cuenta</string>
    <string name="texto_boton_solicitar_visita">Solicitar Visita</string>
</resources>